Fixing display issue on firefox.

--- a/tagsly.less
+++ b/tagsly.less
@@ -49,6 +49,10 @@
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
+
+    &:disabled {
+      display: none;
+    }
   }
 
   ul.suggest {
